20090104 FluidSynth-DSSI v1.0.0 release
 * Version bump to 1.0.0.

20081214 CVS smbolton
 * Version bump to 0.9.1.2.
 * Bug fix from James McDermott for the broken-nwrite_float
     code in fluidsynth-dssi.c when used with unusual sample
     counts.
 * Removed the FluidSynth source patches in extra/, removed
     references to the patches in README, and reworked configure.ac
     to simply check that the FluidSynth version is >=1.0.6 before
     setting USE_AUGMENTED_FLUIDSYNTH_API and
     NWRITE_FLOAT_WORKS_CORRECTLY.
 * Added '-test' option to FluidSynth-DSSI_gtk.c to allow testing
     the GUI without a host.
 * Fixed to use gcc/glibc 'constructor' and 'destructor' attributes
    instead of the deprecated _init() and _fini() functions (needed
    for OS X 10.4 'Tiger').
 * Added code in FluidSynth-DSSI_gtk.c to silently ignore the
    'sample-rate' method.

20050608 CVS smbolton
 * Version bump to 0.9.1.1.
 * Updated code, patch, and docs to match Josh Green's FluidSynth
     CVS commit of 20050607.

20050530 FluidSynth-DSSI v0.9.1 release
 * Symlink fluidsynth-dssi to jack-dssi-host, if it exists.

20050510 CVS smbolton
 * Version bump to 0.9.1.
 * Moved FluidSynth-DSSI into its own SourceForge CVS module.
 * configure.ac improvements.

20050424 v0.9.1alpha2 smbolton
 * Changed to an API-conforming but less efficient implementation
     in the plugin using fluid_synth_nwrite_float().
 * Bundled the soundfont metadata loading code necessary to make
     the GUI independent of libfluidsynth.
 * Added automake/autoconf build system.

20041109
 * Implemented global polyphony setting.
 * GUI resizing fix.
 * Optionally use GTK+ v2.x (edit Makefile).

20041101
 * Updated for DSSI v0.9: implemented project directory.
 * Updated for liblo v0.12: removed non-blocking hack.
 * Implemented loading soundfont from SF2_PATH in GUI.
 * Implemented gain setting in GUI.
 * Better inter-thread cooperation: fsd_configure() now avoids